# GoGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: button.h  check_game_state.h  choose_mode_interface.h  easy_mode.h  endgame_interface.h  game.h  hard_mode.h  home_interface.h  kill_enemy.h  loadgame_interface.h  menu_interface.h  move.h  playing_interface.h  save_load_game.h  text_utlish.h  valid.h
saves/: 2025-11-06_12-01-25.json  2025-11-06_12-01-31.json  2025-11-06_12-01-37.json  2025-11-06_12-01-47.json  2025-11-06_12-01-57.json  2025-11-08_15-52-06.json  2025-11-10_15-24-47.json  2025-11-10_15-24-49.json  2025-11-10_15-24-53.json  2025-11-10_15-24-54.json  2025-11-10_15-24-55.json  2025-11-10_15-24-56.json  2025-11-10_15-24-57.json  2025-11-10_15-24-59.json  2025-11-10_15-25-02.json  2025-11-10_15-25-03.json  2025-11-10_15-25-04.json  2025-11-10_15-25-09.json  2025-11-10_15-25-10.json  2025-11-10_15-25-11.json  2025-11-10_15-25-16.json  2025-11-10_15-25-17.json  2025-11-10_15-25-18.json  2025-11-10_15-25-19.json  2025-11-18_11-02-25.json  test.json
src/: WINDOW_PLAYING.cpp  WINDOW_PLAYING.h  board.cpp  board.h  button.h  check_game_state.cpp  check_game_state.h  endgame_interface.cpp  endgame_interface.h  game.cpp  history.cpp  history.h  home_interface.cpp  info_board.cpp  info_board.h  inside.cpp  inside.h  kill_enemy.cpp  kill_enemy.h  load_playing_interface.cpp  loadgame_interface.cpp  loadgame_interface.h  main.cpp  menu_interface.cpp  menu_interface.h  move.cpp  move.h  player.cpp  player.h  playing_interface.cpp  playing_interface.h  playing_mode_interface.cpp  playing_mode_interface.h  save_load_game.cpp  save_load_game.h  scoring.cpp  scoring.h  skip.cpp  skip.h  text_utlish.h  (+1 more)
src/AI/: easy_mode.cpp  easy_mode.h  hard_mode.cpp  hard_mode.h  medium_mode.cpp  medium_mode.h
src/interface/: choose_mode_interface.cpp  endgame_interface.cpp  home_interface.cpp  loadgame_interface.cpp  menu_interface.cpp  playing_interface.cpp  playing_mode_interface.cpp
src/logic/: history.cpp  kill_enemy.cpp  move.cpp  player.cpp  valid.cpp
